fixed alignment issues, updated font size, removed debugging css

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body,html {
   margin: 0;
   padding: 0;
   background-color: #1E1E1E;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 }
 
@@ -21,7 +21,6 @@ body,html {
 
 .text-block{
   display: inline;
-  background-color: hotpink;
 }
 .help-text{
   color: white;
